--- a/WebContent/Colosseum/Style/Intro_css.css
+++ b/WebContent/Colosseum/Style/Intro_css.css
@@ -4,25 +4,12 @@ html, body{
 	height:100%;
 	margin:0; padding:0;
 	/*디자인상 넣은 마진 패딩*/
-}
-
-#wrap{
-	width:100%;
-	height:100%;
-	margin:0 auto;
-	background-color:white;
-}
-
-div.side_menu{
-	width:15%;
-	background-color:#FFFFFF;
-}
-div.cover{
-	height:100%;
-	right:0px;
-	background-color:#66FFFF;
 	
 }
-span.side_button{
-	background-color:green;
+
+div.cover{
+	height: 50%;
+	left:0px;
+	background-color: blue;
+	
 }
